--- a/inStoreDisplay/css/app.css
+++ b/inStoreDisplay/css/app.css
@@ -7,14 +7,14 @@ div.content {
 	margin:0;
 	padding:0;
 	position:absolute;
-	width:100%;
-	height:100%;
+	width:1920px;
+	height:1080px;
 }
 
 div#welcome {
-	background-color:blue;
+	background-image:url("img/hero-img.jpg");
+	filter: blur(4px);
 }
 
 div#productInfo {
-	background-color:red;
 }
