--- a/inStoreDisplay/css/app.css
+++ b/inStoreDisplay/css/app.css
@@ -21,13 +21,15 @@ div#background {
 div#logo {
 	background-image:url("img/bAw-logo-payoff-hvid.png");
 	background-size:contain;
-	width:580px;
-	height:185px;
+	width:577px;
+	height:179px;
+	margin: 0 auto;
+	margin-top:270px;
 }
 
 div#views {
 	background-color: rgba(84, 113, 159, 0.7);
 }
 
-div#productInfo {
+div#welcome {
 }
