--- a/inStoreDisplay/css/app.css
+++ b/inStoreDisplay/css/app.css
@@ -1,3 +1,5 @@
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');*/
+				
 body {
 	margin:0;
 	padding:0;
@@ -8,12 +10,12 @@ body {
 
 h1 {
 	font-size: 50px;     
-	font-weight: 100;
+	font-weight: 300;
 }
 
 span {
-	font-size: 40px;     
-	font-weight: 100;
+	font-size: 30px;     
+	font-weight: 300;
 }
 
 div.content {
@@ -46,7 +48,7 @@ div#welcome {
 }
 
 div#productInfo div#panel {
-	background-color:rgba(255,255,255,0.1);
+	background-color:rgba(255,255,255,0.01);
 	width:1200px;
 	height:800px;
 	margin-top:100px;
