--- a/inStoreDisplay/css/app.css
+++ b/inStoreDisplay/css/app.css
@@ -66,4 +66,21 @@ div#chart {
 	left:1200px;
 }
 
+div#chart canvas {
+	position:absolute;
+}
 
+div#chart ul {
+	position:absolute;
+	width:340px;
+	height:200px;
+	margin-top:164px;
+	list-style-type:none;
+}
+
+div#chart li {
+	text-align:right;
+	font-size:24px;
+	font-weight:300;
+	height:60px;
+}
