--- a/inStoreDisplay/css/app.css
+++ b/inStoreDisplay/css/app.css
@@ -6,6 +6,7 @@ body {
     font-family: 'Open Sans', sans-serif;
 	color:rgba(255,255,255,255);
 	font-size: 40px;     
+	background-color:rgba(0,0,0,255);
 }
 
 h1 {
