--- a/inStoreDisplay/css/app.css
+++ b/inStoreDisplay/css/app.css
@@ -14,6 +14,11 @@ h1 {
 	font-weight: 300;
 }
 
+h2 {
+	font-size: 50px;     
+	font-weight: 700;
+}
+
 span {
 	font-size: 30px;     
 	font-weight: 300;
