--- a/inStoreDisplay/css/app.css
+++ b/inStoreDisplay/css/app.css
@@ -28,8 +28,8 @@ div.content {
 	margin:0;
 	padding:0;
 	position:absolute;
-	width:1920px;
-	height:1080px;
+	width:1080px;
+	height:1920px;
 }
 
 div.content.page {
@@ -37,7 +37,8 @@ div.content.page {
 }
 
 div#background {
-	background-image:url("img/hero-img.jpg");
+	/*background-image:url("img/hero-img.jpg");*/
+	background-image:url("img/1080x1920.jpg");
 	filter: blur(4px);
 }
 
