--- a/inStoreDisplay/css/app.css
+++ b/inStoreDisplay/css/app.css
@@ -10,11 +10,12 @@ body {
 }
 
 h1 {
-	font-size: 50px;     
+	font-size: 60px;     
 	font-weight: 300;
 }
 
 h2 {
+	margin-top:-50px;
 	font-size: 50px;     
 	font-weight: 700;
 }
@@ -35,6 +36,12 @@ div.content {
 div.content.page {
 	display:none;
 }
+
+div#Certifications div {
+	float:left;
+	font-size:30px;
+	font-weight:100;
+} 
 
 div#background {
 	/*background-image:url("img/hero-img.jpg");*/
@@ -60,11 +67,12 @@ div#welcome {
 
 div#productInfo div#panel {
 	background-color:rgba(255,255,255,0.00);
-	width:1200px;
+	width:980px;
 	height:800px;
 	margin-top:100px;
-	padding-top:20px;
+	padding-top:50px;
 	padding-left:50px;
+	padding-right:50px;
 }
 
 div#chart {
