--- a/inStoreDisplay/css/app.css
+++ b/inStoreDisplay/css/app.css
@@ -76,6 +76,7 @@ div#productInfo div#panel {
 }
 
 div#chart {
+	margin-top:150px;
 	/*
 	position:absolute;
 	top:0px;
@@ -83,23 +84,33 @@ div#chart {
 	*/
 }
 
+div#chart span#ComparisonBase {
+	margin-top:20px;
+	font-size:22px;
+	display:block;
+	text-align:center;
+	width:100%;
+	color:rgba(255,255,255,0.8);
+}
+
 div#chart canvas {
-	position:absolute;
+	width:100%;
+	margin:0 auto;
 }
 
 div#chart ul {
 	position:absolute;
-	width:340px;
+	width:420px;
 	height:200px;
-	margin-top:164px;
+	margin-top:0px;
 	list-style-type:none;
 }
 
 div#chart li {
 	text-align:right;
-	font-size:24px;
-	font-weight:300;
-	height:60px;
+	font-size:28px;
+	font-weight:100;
+	height:72px;
 }
 
 img#ProductImage {
