--- a/inStoreDisplay/css/app.css
+++ b/inStoreDisplay/css/app.css
@@ -123,6 +123,27 @@ img#ProductImage {
 	height:auto;
 }
 
+div#ProcessLine div {
+	background-color:yellow;
+	display:block;
+	height:260px;
+	overflow:hidden;
+}
+
+div#ProcessLine table {
+	vertical-align:top;
+	table-layout:fixed;
+	width:100%;
+}
+
+div#ProcessLine table span {
+	display:block;
+	width:100%;
+	text-align:center;
+}
+
 img.ProcessImg {
+	margin:0 auto;
 	width:204px;
 }
+
