--- a/inStoreDisplay/css/app.css
+++ b/inStoreDisplay/css/app.css
@@ -124,7 +124,6 @@ img#ProductImage {
 }
 
 div#ProcessLine div {
-	background-color:yellow;
 	display:block;
 	height:260px;
 	overflow:hidden;
@@ -137,13 +136,18 @@ div#ProcessLine table {
 }
 
 div#ProcessLine table span {
-	display:block;
-	width:100%;
+	width:488px;
 	text-align:center;
+	position:absolute;
+	margin-top:210px;
+	font-size:30px;
+	font-weight:700;
 }
 
 img.ProcessImg {
 	margin:0 auto;
 	width:204px;
+	display:block;
+	margin-bottom:20px;
 }
 
